FIX Persistence Code aus Aggregaten entfernen